--- a/extras/Projucer/CMakeLists.txt
+++ b/extras/Projucer/CMakeLists.txt
@@ -159,4 +159,7 @@ target_link_libraries(Projucer PRIVATE
     ProjucerData
     juce::juce_build_tools
     juce::juce_cryptography
-    juce::juce_gui_extra)
+    juce::juce_gui_extra
+    juce::juce_recommended_config_flags
+    juce::juce_recommended_lto_flags
+    juce::juce_recommended_warning_flags)
