CMake:  Avoid GLOB_RECURSE when adding PIPs
If git/zip-extraction add hidden directories containing files with a
`.h` extension we don't want to try to build those files as PIPs. Using
GLOB instead of GLOB_RECURSE should help to avoid files in nested
directories.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,7 +18,7 @@ add_subdirectory(CMake)
 add_subdirectory(DemoRunner)
 
 function(_juce_add_pips)
-    file(GLOB_RECURSE headers
+    file(GLOB headers
         CONFIGURE_DEPENDS LIST_DIRECTORIES false
         "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 
