--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,6 +14,8 @@
 #
 # ==============================================================================
 
+set(CMAKE_FOLDER examples)
+
 add_subdirectory(CMake)
 add_subdirectory(DemoRunner)
 
