--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -3,9 +3,6 @@ name: Linux Builds
 on:
   push
 
-env:
-  BUILD_TYPE: Release
-
 jobs:
   linux_build:
     runs-on: ubuntu-18.04
@@ -22,8 +19,22 @@ jobs:
         sudo apt-get install freeglut3-dev mesa-common-dev libglu1-mesa-dev libwebkit2gtk-4.0-dev
         sudo apt-get install libgtk-3-dev libjack-jackd2-dev ladspa-sdk
 
-    - name: Build JUCE
+    - name: Build Debug
       shell: bash
       run: |
-        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-        cmake --build cmake-build --target DemoRunner
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Debug
+        cmake --build cmake-build -- -j8
+
+    - name: Unit Tests Debug
+      shell: bash
+      run: cmake-build/extras/UnitTestRunner/UnitTestRunner_artefacts/Debug/UnitTestRunner
+
+    - name: Build Release
+      shell: bash
+      run: |
+        cmake -B cmake-build -DJUCE_BUILD_EXAMPLES=ON -DJUCE_BUILD_EXTRAS=ON -DCMAKE_BUILD_TYPE=Release
+        cmake --build cmake-build -- -j8
+
+    - name: Unit Tests Release
+      shell: bash
+      run: cmake-build/extras/UnitTestRunner/UnitTestRunner_artefacts/Release/UnitTestRunner
